# dashbar

./: .gitignore  CMakeLists.txt  Dashbar.pro  appButton.cpp  appButton.h  application.h  applicationRules.h  applications.cpp  applications.h  buttonManager.cpp  buttonManager.h  config.h  fileDialog.cpp  fileDialog.h  flowlayout.cpp  flowlayout.h  gridlayout.cpp  gridlayout.h  isetting.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapper.h  resources.qrc
.github/workflows/: build.yaml
src/: CMakeLists.txt  application.cpp  application.h  applicationRules.cpp  applications.cpp  applications.h  buttonManager.cpp  buttonManager.h  config.cpp  fileDialog.cpp  fileDialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mapper.cpp  osretriever.cpp  osretriever.h  resources.qrc  settings.ini  src.pro  src.user.pro  ui_mainwindow.h  windowPositionManager.cpp  windowPositionManager.h
tests/: tests.pro  tst_applications.cpp  tst_applications.h  tst_buttonManager.cpp  tst_buttonManager.h  tst_main.cpp  tst_windowPositionManager.cpp  tst_windowPositionManager.h
